--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <!-- <i class="bi bi-cart3"></i>  -->
             </li>
             <li >
-                <div id=" login"><button  class="btn-btn-default">
-                Login/Signup
+                <div id=" login"><button type="button" class="btn-btn-default">
+                <p>Login/Signup</p>
                 </button>
                 </div>
             </li>
